--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-front": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-server": "ts-node --project tsconfig-server.json server"
+    "start": "ts-node --project tsconfig-server.json server"
   },
   "eslintConfig": {
     "extends": [
