--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6",
+    "ts-node": "^9.1.1",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
