--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "@types/express": "^4.17.11",
+    "@types/node": "^12.20.5"
   },
   "scripts": {
     "start-front": "react-scripts start",
@@ -49,9 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^12.20.5"
   }
 }
